force-app/main/default/objects/Bank_LocalConfig__c/Bank_LocalConfig__c.object-meta.xml
<CustomObject>
    <label>Bank_LocalConfig</label>
    <nameField>
        <displayFormat>ATM-{0000}</displayFormat>
        <label>Mashine ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank_LocalConfigs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>