force-app/main/default/objects/Bank_LocalConfig__c/fields/BankName__c.field-meta.xml
<CustomField>
    <fullName>BankName__c</fullName>
    <label>BankName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>