force-app/main/default/objects/Bank_LocalConfig__c/fields/card_inside__c.field-meta.xml
<CustomField>
    <fullName>card_inside__c</fullName>
    <defaultValue>false</defaultValue>
    <label>card_inside</label>
    <type>Checkbox</type>
</CustomField>