force-app/main/default/objects/Bank_LocalConfig__c/fields/card_No__c.field-meta.xml
<CustomField>
    <fullName>card_No__c</fullName>
    <label>card_No</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>