force-app/main/default/objects/Bank_LocalConfig__c/fields/cardCurrency__c.field-meta.xml
<CustomField>
    <fullName>cardCurrency__c</fullName>
    <label>cardCurrency</label>
    <length>5</length>
    <type>Text</type>
</CustomField>