force-app/main/default/objects/Bank_LocalConfig__c/fields/cardEmuEnabled__c.field-meta.xml
<CustomField>
    <fullName>cardEmuEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cardEmuEnabled</label>
    <type>Checkbox</type>
</CustomField>