force-app/main/default/objects/Bank_LocalConfig__c/fields/cardEmuOpened__c.field-meta.xml
<CustomField>
    <fullName>cardEmuOpened__c</fullName>
    <defaultValue>false</defaultValue>
    <label>cardEmuOpened</label>
    <type>Checkbox</type>
</CustomField>