force-app/main/default/objects/Bank_LocalConfig__c/fields/currentBalance__c.field-meta.xml
<CustomField>
    <fullName>currentBalance__c</fullName>
    <label>currentBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>