force-app/main/default/objects/Bank_LocalConfig__c/fields/currentPage__c.field-meta.xml
<CustomField>
    <fullName>currentPage__c</fullName>
    <label>currentPage</label>
    <length>50</length>
    <type>Text</type>
</CustomField>