force-app/main/default/objects/Bank_LocalConfig__c/fields/EnteredPIN__c.field-meta.xml
<CustomField>
    <fullName>EnteredPIN__c</fullName>
    <label>EnteredPIN</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>