force-app/main/default/objects/Bank_LocalConfig__c/fields/HeaderText__c.field-meta.xml
<CustomField>
    <fullName>HeaderText__c</fullName>
    <label>HeaderText</label>
    <length>100</length>
    <type>Text</type>
</CustomField>