force-app/main/default/objects/Bank_LocalConfig__c/fields/IncorrectPIN__c.field-meta.xml
<CustomField>
    <fullName>IncorrectPIN__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IncorrectPIN</label>
    <type>Checkbox</type>
</CustomField>