force-app/main/default/objects/Bank_LocalConfig__c/fields/init_complited__c.field-meta.xml
<CustomField>
    <fullName>init_complited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>init_complited</label>
    <type>Checkbox</type>
</CustomField>