force-app/main/default/objects/Bank_LocalConfig__c/fields/language__c.field-meta.xml
<CustomField>
    <fullName>language__c</fullName>
    <label>language</label>
    <length>50</length>
    <type>Text</type>
</CustomField>