force-app/main/default/objects/Bank_LocalConfig__c/fields/OtherBankPrc__c.field-meta.xml
<CustomField>
    <fullName>OtherBankPrc__c</fullName>
    <label>OtherBankPrc</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>