force-app/main/default/objects/Bank_LocalConfig__c/fields/RateBYN__c.field-meta.xml
<CustomField>
    <fullName>RateBYN__c</fullName>
    <label>RateBYN</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>