force-app/main/default/objects/Bank_LocalConfig__c/fields/RateUSD__c.field-meta.xml
<CustomField>
    <fullName>RateUSD__c</fullName>
    <label>RateUSD</label>
    <precision>10</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>