force-app/main/default/objects/Bank_LocalConfig__c/fields/sessionValidated__c.field-meta.xml
<CustomField>
    <fullName>sessionValidated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>sessionValidated</label>
    <type>Checkbox</type>
</CustomField>