force-app/main/default/objects/Bank_LocalConfig__c/fields/Unknown_Card__c.field-meta.xml
<CustomField>
    <fullName>Unknown_Card__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unknown_Card</label>
    <type>Checkbox</type>
</CustomField>