force-app/main/default/objects/Bank_LocalConfig__c/fields/waiting__c.field-meta.xml
<CustomField>
    <fullName>waiting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>waiting</label>
    <type>Checkbox</type>
</CustomField>